# async-fastapi-boilerplate-v2

./: .env  .env.dev  .pre-commit-config.yaml  .pylintrc  .python-version  README.md  docker-compose.yml  mypy.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: release-drafter.yml
.github/workflows/: build-dev.yml  pre-commit.yml  release-beta.yml  release-production.yml
backend/: .dockerignore  Dockerfile.api  Dockerfile.worker
backend/app/: prestart.sh  pyproject.toml  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 198552264d34_.py  8c0561c7a246_.py
backend/app/app/: api_logging.json  backend_pre_start.py  custom_logging.py  initial_data.py  main.py  worker.py  worker_logging.json  worker_pre_start.py
backend/app/app/api/api_v0/: api.py  deps.py
backend/app/app/api/api_v0/endpoints/: auth.py  items.py  tests.py  users.py
backend/app/app/core/: celery_app.py  security.py  settings.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: item.py  user.py
backend/app/app/pg_repository/: __init__.py  base.py  repository_item.py  repository_user.py
backend/app/app/redis_repository/: __init__.py  base.py  repository_user.py
backend/app/app/schemas/: __init__.py  item.py  response.py  token.py  user.py
backend/app/app/tasks/: test.py
backend/app/app/usecase/: __init__.py  base.py  usecase_item.py  usecase_user.py
backend/app/app/utils/: encoders.py  errors.py  sql.py
scripts/: update_version.py
