[tool.poetry]
name = "async-fastapi-boilerplate-v2"
version = "0.1.0"
description = ""
authors = ["Xuan Hien <hiennguyen9874@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "^0.0.6"
requests = "^2.28.2"
celery = "^5.2.7"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
tenacity = "^8.2.2"
pydantic = "^1.10.7"
gunicorn = "^20.1.0"
alembic = "^1.10.3"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.10"
fastapi = "^0.95.1"
aiofiles = "^23.1.0"
watchdog = "^3.0.0"
more-itertools = "^9.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.20.0"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
loguru = "^0.7.0"
pytz = "^2023.3"
email-validator = "^2.0.0.post2"
redis = {extras = ["hiredis"], version = "^4.5.4"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
flake8-blind-except = "^0.2.1"
flake8-bandit = "^4.1.1"
flake8-docstrings = "^1.7.0"
flake8-logging-format = "^0.9.0"
flake8-print = "^5.0.0"
autoflake = "^2.1.1"
bandit = "^1.7.5"
types-pytz = "^2023.3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
